--- a/vartgallery/src/main/resources/application.properties
+++ b/vartgallery/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.mvc.view.suffix=.jsp
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
+
+logging.level.org.springframework.security=DEBUG
