--- a/vartgallery/src/main/resources/application.properties
+++ b/vartgallery/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=vartgallery
 jwt.secret=${JWT_SECRET}
+stripe.secret=${STRIPE_SECRET}
+stripe.public=${STRIPE_PUBLIC}
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
@@ -7,6 +9,7 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
+
+logging.level.org.springframework.security=DEBUG
